--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -25,13 +25,13 @@ keep_players=0
 authorization_enable=0
 
 ; 是否使能推送的同事进行本地存储，使能后则可以进行录像查询与回放。
-save_stream_to_local=0
+save_stream_to_local=1
 
 ;easydarwin使用ffmpeg工具来进行存储。这里表示ffmpeg的可执行程序的路径
-ffmpeg_path=/Users/ze/Downloads/ffmpeg-20180719-9cb3d8f-macos64-shared/bin/ffmpeg
+ffmpeg_path=ffmpeg
 
 ;本地存储所将要保存的根目录。如果不存在，程序会尝试创建该目录。
-m3u8_dir_path=/Users/ze/Downloads/EasyDarwinGoM3u8
+m3u8_dir_path=C:\Users\Administrator\go\src\github.com\snowlyg\EasyDarwinGoM3u8
 
 ;切片文件时长。本地存储时，将以该时间段为标准来生成ts文件(该时间+一个I帧间隔)，单位秒。
 ;如果需要直播，这个值设小点，但是这样会产生很多ts文件；如果不需要直播，只要存储的话，可设大些。
