--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "order": [
       "stats",
       "Pushers",
-      "Players",
+      "ers",
       "stream",
       "StreamStart",
       "StreamStop",
