修改启动程序

--- a/easydarwin.ini.example
+++ b/easydarwin.ini.example
@@ -4,7 +4,9 @@ default_username=admin
 default_password=admin
 
 [rtsp]
-port=554
+port=8554
+
+out_put_ip=localhost
 
 ; rtsp 超时时间，包括RTSP建立连接与数据收发。
 timeout=28800
@@ -38,4 +40,4 @@ m3u8_dir_path=C:\Users\Administrator\go\src\github.com\snowlyg\EasyDarwinGoM3u8
 ts_duration_second=6
 
 ;key为拉流时的自定义路径，value为 ffmpeg 转码格式，比如可设置为 -strict -2 -threads 2 -c:v copy -c:a copy -f flv ，表示copy源格式；default 表示使用  -strict -2 -threads 2 -c:v copy -c:a copy -f flv 不转码。
-decoder=default
+decoder=-strict -2 -threads 2 -c:v copy -c:a copy -f rtsp
