--- a/easydarwin.ini.example
+++ b/easydarwin.ini.example
@@ -27,7 +27,7 @@ keep_players=0
 authorization_enable=0
 
 ; 是否使能推送的同事进行本地存储，使能后则可以进行录像查询与回放。
-save_stream_to_local=1
+save_stream_to_local=0
 
 ;easydarwin使用ffmpeg工具来进行存储。这里表示ffmpeg的可执行程序的路径
 ffmpeg_path=ffmpeg
@@ -40,4 +40,4 @@ m3u8_dir_path=C:\Users\Administrator\go\src\github.com\snowlyg\EasyDarwinGoM3u8
 ts_duration_second=6
 
 ;key为拉流时的自定义路径，value为 ffmpeg 转码格式，比如可设置为 -strict -2 -threads 2 -c:v copy -c:a copy -f flv ，表示copy源格式；default 表示使用  -strict -2 -threads 2 -c:v copy -c:a copy -f flv 不转码。
-decoder=-strict -2 -threads 2 -c:v copy -c:a copy -f rtsp
+decoder= -c:v copy -c:a copy -f rtsp
