--- a/easydarwin.ini.example
+++ b/easydarwin.ini.example
@@ -37,5 +37,8 @@ m3u8_dir_path=./EasyDarwinGoM3u8
 ;如果需要直播，这个值设小点，但是这样会产生很多ts文件；如果不需要直播，只要存储的话，可设大些。
 ts_duration_second=6
 
-;key为拉流时的自定义路径，value为ffmpeg转码格式，比如可设置为-c:v copy -c:a copy，表示copy源格式；default表示使用ffmpeg内置的输出格式，会进行转码。
-/test=-c:v copy -c:a copy
+;key 是decoder ， value为 ffmpeg 转码格式，比如可设置为 -strict -2 -threads 2 -c:v copy -c:a copy -f rtsp ，表示copy源格式；default 表示使用  -strict -2 -threads 2 -c:v copy -c:a copy -f rtsp 不转码。
+;rtsp: -strict -2 -threads 2 -c:v copy -c:a copy -f rtsp
+;flv:  -strict -2 -threads 2 -c:v copy -c:a copy -f flv
+;hls:  -strict -2 -threads 2 -c:v copy -c:a copy -f hls
+decoder=-strict -2 -threads 2 -c:v copy -c:a copy -f rtsp
