修改文件过滤

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,25 @@
-.vscode
+/.vscode/
+/.idea/
+/.DS_Store/
+
 /easydarwin
 /EasyDarwin.exe
 /EasyDarwin.exe~
-/logs
+
+/logs/
+/web_src/node_modules/
+/www/
+
 /*.log
-node_modules
-*.db
-*.db.bak
+/*.db
+/*.db.bak
 /*.zip
 /*.tar.gz
 /*.dev.ini
 /*.dev.db
-.idea
-easydarwin_debug.ini
-.DS_Store
-Unnamed
-dev.ini
-debug
-debug.ini
-www/
+/*.ini
+
+/Unnamed
+/debug
+/easydarwin_lin
 
