尝试优化内存溢出

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -2,8 +2,12 @@
 port=10008
 default_username=admin
 default_password=admin
+debug=false
 
 [rtsp]
+debug_log_enable=0
+
+;端口
 port=554
 
 ; rtsp 超时时间，包括RTSP建立连接与数据收发。
